// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that failed checks 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--grey">Checks failed</strong>",
    },
  },
  {
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "html": "
    Friends or family (not tenant or owner)
    <p class="govuk-!-margin-bottom-2">Settled</p>
  ",
    },
  },
  {
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Failed",
    },
  },
]
`;

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that has not been checked 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--red">Not checked yet</strong>",
    },
  },
  {
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "html": "
    Friends or family (not tenant or owner)
    <p class="govuk-!-margin-bottom-2">Settled</p>
  ",
    },
  },
  {
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Not checked yet",
    },
  },
]
`;

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that is confirmed 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--green">Confirmed</strong>",
    },
  },
  {
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "html": "
    Friends or family (not tenant or owner)
    <p class="govuk-!-margin-bottom-2">Settled</p>
  ",
    },
  },
  {
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Passed",
    },
  },
  {
    "key": {
      "text": "Next address",
    },
    "value": {
      "text": "Yes",
    },
  },
]
`;

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that passed checks 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--yellow">Checks passed</strong>",
    },
  },
  {
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "html": "
    Friends or family (not tenant or owner)
    <p class="govuk-!-margin-bottom-2">Settled</p>
  ",
    },
  },
  {
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Passed",
    },
  },
  {
    "key": {
      "text": "Next address",
    },
    "value": {
      "text": "Unknown",
    },
  },
]
`;

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address with an arrangement type of "Other" 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--red">Not checked yet</strong>",
    },
  },
  {
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "html": "
    <p class="govuk-!-margin-bottom-2">Other</p><p class="govuk-!-margin-bottom-2">Some description</p>
    <p class="govuk-!-margin-bottom-2">Settled</p>
  ",
    },
  },
  {
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Not checked yet",
    },
  },
]
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks failed" proposed address status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Other: Somebody's attic. Transient.",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "5 January 2026 (16 days ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": true,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "grey",
    "text": "Checks failed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks passed" proposed address status card object if the nextAccommodationStatus is NO 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Private rent, room/share (tenant). ",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit?flow=nextAccommodation",
      "text": "Confirm as next address",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Checks passed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks passed" proposed address status card object if the nextAccommodationStatus is TO_BE_DECIDED 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Private rent, room/share (tenant). ",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit?flow=nextAccommodation",
      "text": "Confirm as next address",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Checks passed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks passed" proposed address status card object if the nextAccommodationStatus is undefined 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Private rent, room/share (tenant). ",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit?flow=nextAccommodation",
      "text": "Confirm as next address",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Checks passed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "confirmed" proposed address status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Private rent, room/share (tenant). ",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "green",
    "text": "Confirmed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "not checked yet" proposed address status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Owned (named on deeds/mortgage). Settled.",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit?flow=status",
      "text": "Add checks",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "red",
    "text": "Not checked yet",
  },
}
`;

exports[`Proposed addresses utilities summaryListRows formats arrangement when other type selected 1`] = `"<p class="govuk-!-margin-bottom-2">Other</p><p class="govuk-!-margin-bottom-2">Hostel</p>"`;

exports[`Proposed addresses utilities summaryListRows formats status when checks failed with reason 1`] = `"<p class="govuk-!-margin-bottom-2">Failed</p><p class="govuk-!-margin-bottom-2">Not suitable</p>"`;
